# underground-beats

./: .gitignore  CMakeLists.txt  README.md
documentation/: overview.md
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/effects/: Delay.cpp  Reverb.cpp  Reverb.h
src/sequencer/: Sequencer.cpp
src/ui/: AppComponent.cpp  AppComponent.h
src/ui/components/: MixerChannel.cpp  PatternControlPanel.cpp  PatternControlPanel.h  PatternEditor.cpp  PatternEditor.h
src/ui/views/: MixerView.cpp  MixerView.h  PatternEditorView.cpp  PatternEditorView.h
